// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Uninitialized App should render correctly 1`] = `
<DocumentFragment>
  <div
    class="Container"
  >
    <div
      class="CurrencySelectorsContainer"
    >
      <div
        class="Container "
      >
        <label
          class="Label"
        >
          From:
        </label>
        <div
          class="InputContainer"
        >
          <div
            class="SelectedCurrencyContainer"
          >
            <div
              class="CurrencyIcon eur"
            />
            <div
              class="CurrencyName"
            >
              eur
            </div>
          </div>
          <span
            class="DropdownArrow"
          />
        </div>
      </div>
      <button
        class="Button"
      >
        <span
          class="Icon"
        />
      </button>
      <div
        class="Container "
      >
        <label
          class="Label"
        >
          To:
        </label>
        <div
          class="InputContainer"
        >
          <div
            class="SelectedCurrencyContainer"
          >
            <div
              class="CurrencyIcon gbp"
            />
            <div
              class="CurrencyName"
            >
              gbp
            </div>
          </div>
          <span
            class="DropdownArrow"
          />
        </div>
      </div>
    </div>
    <div
      class="InitialAmountInputContainer"
    >
      <div
        class="Container"
      >
        <label
          class="Label"
          for="amount-amount"
        >
          Amount:
        </label>
        <input
          class="Input"
          id="amount-amount"
          name="amount-amount"
          type="text"
          value="0"
        />
        <span
          class="Currency"
        >
          eur
        </span>
      </div>
    </div>
    <button
      class="Button"
    >
      Convert
    </button>
  </div>
</DocumentFragment>
`;

exports[`Uninitialized App should render correctly 2`] = `
<DocumentFragment>
  <div
    class="Container"
  >
    <div
      class="CurrencySelectorsContainer"
    >
      <div
        class="Container "
      >
        <label
          class="Label"
        >
          From:
        </label>
        <div
          class="InputContainer"
        >
          <div
            class="SelectedCurrencyContainer"
          >
            <div
              class="CurrencyIcon eur"
            />
            <div
              class="CurrencyName"
            >
              eur
            </div>
          </div>
          <span
            class="DropdownArrow"
          />
        </div>
      </div>
      <button
        class="Button"
      >
        <span
          class="Icon"
        />
      </button>
      <div
        class="Container "
      >
        <label
          class="Label"
        >
          To:
        </label>
        <div
          class="InputContainer"
        >
          <div
            class="SelectedCurrencyContainer"
          >
            <div
              class="CurrencyIcon gbp"
            />
            <div
              class="CurrencyName"
            >
              gbp
            </div>
          </div>
          <span
            class="DropdownArrow"
          />
        </div>
      </div>
    </div>
    <div
      class="AmountInputsContainer"
    >
      <div
        class="Container"
      >
        <label
          class="Label"
          for="amount-amount"
        >
          Amount:
        </label>
        <input
          class="Input"
          id="amount-amount"
          name="amount-amount"
          type="text"
          value="0"
        />
        <span
          class="Currency"
        >
          eur
        </span>
      </div>
      <div
        class="Container"
      >
        <label
          class="Label"
          for="amount-convertedto"
        >
          Converted to:
        </label>
        <input
          class="Input"
          id="amount-convertedto"
          name="amount-convertedto"
          type="text"
          value="0"
        />
        <span
          class="Currency"
        >
          gbp
        </span>
      </div>
    </div>
    <div
      class="Container"
    >
      <span
        class="Decoration"
      />
      <span
        class="ExchangeRate"
      >
        1 eur = 1 gbp
      </span>
    </div>
    <p
      class="Disclaimer"
    >
      All figures are live mid-market rates, which are for informational purposes only. To see the rates for money transfer, please select sending money option.
    </p>
  </div>
</DocumentFragment>
`;
